...
import { Avatar, Box, Button, Text, useContrastText } from 'native-base';
import { useMemo } from 'react';

import customersProvider from '../data/customersProvider';
import { RootStackParamList } from '../router/AppRouter';

type CustomerDetailsType = NativeStackScreenProps<RootStackParamList, 'CustomerDetails'>;

interface CustomerDetailsProps {
  navigation: CustomerDetailsType['navigation'];
  route: CustomerDetailsType['route'];
}

...
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quas modi iusto tempore, officiis beatae minus
          laboriosam perferendis reprehenderit saepe excepturi magnam unde iste molestias similique voluptatum
          cupiditate nobis illum.
        </Text>
      </Box>
      <Button colorScheme="secondary" size="lg" mt="auto" onPress={() => navigation.goBack()}>
        Back to list
      </Button>
    </Box>
  );
};

export default CustomerDetails;
...
